# single_sample_qc_popgen

./: .bumpversion.cfg  .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  workflow_dag.dot
.github/workflows/: build_deploy_main.yaml  dev_auto_build.yaml  docker.yaml  get_version.py  lint.yaml  test.yaml
config/: single_sample_qc_popgen.toml
src/single_sample_qc_popgen/: config_template.toml  constants.py  run_workflow.py  stages.py  utils.py
src/single_sample_qc_popgen/jobs/: check_multiqc.py  register_qc_metamist.py  run_multiqc.py
src/workflow_name/: run_workflow.py  stages.py  utils.py
src/workflow_name/jobs/: DoSomethingGenericWithBash.py  PrintPreviousJobOutputInAPythonJob.py
src/workflow_name/scripts/: hello_world.py
test/: test_some_functionality.py
